# HardwareEffects

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
atomic_functions/: README.md  experiment01.hpp
cache_false_sharing/: CMakeLists.txt  README.md  experiment.cpp  experiment02.hpp
